@@ -7,6 +7,7 @@ Changes
    o Updated vignette and documentation with instructions on changing
      the Flash security settings to display Flash charts locally. 
      Thanks to Tony Breyal.
+   o New example to plot weekly data with gvisMotionChart   
 
 Version 0.2.10 [2011-09-24]
 ==========================
